--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ function openPopup(id) {
       </button>
   </div>
 	<div class="popup">
-	<button class="button-remind" onclick="openPopup('assign01')">
-	<img  class="exclaim" src="Icon awesome-exclamation.svg" alt="reminder">
+	<button class="button-check" onclick="openPopup('assign01')">
+	<img  class="checkpt" src="Icon awesome-user-check.svg" alt="checkpoint">
 	</button>
 	<span class="popuptext" id="assign01">Bring Full Scale Slopers to class for review
 </span>
@@ -255,13 +255,6 @@ function openPopup(id) {
       <img class="book" src="Icon material-class.svg" alt="classInfo">
       </button>
   </div>
-	<div class="popup">
-	<button class="button-remind" onclick="openPopup('assign03')">
-	<img  class="exclaim" src="Icon awesome-exclamation.svg" alt="reminder">
-	</button>
-	<span class="popuptext" id="assign03">Skirt and Sleeve Mods Due at the start of class
-</span>
-	</div>
 </div>
 
 
@@ -343,7 +336,13 @@ function openPopup(id) {
       <img class="book" src="Icon material-class.svg" alt="classInfo">
       </button>
   </div>
-	
+	<div class="popup">
+	<button class="button-remind" onclick="openPopup('assign03')">
+	<img  class="exclaim" src="Icon awesome-exclamation.svg" alt="reminder">
+	</button>
+	<span class="popuptext" id="assign03">Skirt and Sleeve Mods Due at the start of class
+</span>
+	</div>
 </div>
 <!--Class NINE DIV--->
 <div style="grid-column: 2 / span 1; grid-row: 3; display: flex; justify-content: center">
