--- a/index.html
+++ b/index.html
@@ -390,6 +390,9 @@ function openPopup(id) {
       <img class="book" src="Icon material-class.svg" alt="classInfo">
       </button>
   </div>
+</div>
+<!--Drafting Test Final Day-->
+<div style="grid-column: 5 / span 1; grid-row: 4; display: flex; justify-content: center">
 	<div class="popup">
 	<button class="button-remind" onclick="openPopup('assign06')">
 	<img  class="exclaim" src="Icon awesome-exclamation.svg" alt="reminder">
@@ -399,7 +402,6 @@ function openPopup(id) {
 	</div>
 
 </div>
-	
 <!--Class THIRTEEN DIV--->
 <div style="grid-column: 2 / span 1; grid-row: 5; display: flex; justify-content: center">
   <div class="button-div">
