--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function openPopup(id) {
 	<button class="button-help" onclick="openPopup('help01')">
 	<img class="people" src="Icon open-people.svg" alt="extra help">
 	</button>
-	<span class="popuptext" id="help01">Extra Help 10am-12pm
+	<span class="popuptext" id="help01">Extra Help 2pm-4pm N104
 </span>
 	</div>
 </div>
@@ -343,7 +343,7 @@ function openPopup(id) {
 	<button class="button-help" onclick="openPopup('help02')">
 	<img class="people" src="Icon open-people.svg" alt="extra help">
 	</button>
-	<span class="popuptext" id="help02">Extra Help 10am-12pm
+	<span class="popuptext" id="help02">Extra Help 10am-12pm N104
 </span>
 	</div>
 </div>
@@ -620,6 +620,7 @@ function openPopup(id) {
     </div>
 	</body>
 </html>
+
 
 
 
